explicitly add bnd parameter for bundle symbolic name and updated plugins page with appropriate filters

--- a/core/HeatmapEditor/pom.xml
+++ b/core/HeatmapEditor/pom.xml
@@ -48,6 +48,7 @@
                 <extensions>true</extensions>
                 <configuration>  
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>       
                         <Import-Package>*;resolution:=optional</Import-Package>                                           
