--- a/core/genometryImpl/pom.xml
+++ b/core/genometryImpl/pom.xml
@@ -126,6 +126,7 @@
                 <extensions>true</extensions>                
                 <configuration>
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Bundle-Activator>com.affymetrix.genometryImpl.Activator</Bundle-Activator>
