--- a/core/igbGenovizExtensionsApi/pom.xml
+++ b/core/igbGenovizExtensionsApi/pom.xml
@@ -43,6 +43,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Export-Package>com.lorainelab.igb.genoviz.extensions.api</Export-Package>
