--- a/developmentPlugins/ParentOperators/pom.xml
+++ b/developmentPlugins/ParentOperators/pom.xml
@@ -114,7 +114,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
+                    <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>    
                     <instructions>
                         <Export-Package/>
                         <Bundle-Activator>com.affymetrix.genometryImpl.operator.extra.Activator</Bundle-Activator>
