--- a/developmentPlugins/SampleSelection/pom.xml
+++ b/developmentPlugins/SampleSelection/pom.xml
@@ -102,9 +102,9 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
+                <configuration>    
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package>com.gene.sampleselection</Export-Package>
                         <Bundle-Activator>com.gene.sampleselection.Activator</Bundle-Activator>
                         <Bundle-Category>IGBTabPanel-com.gene.sampleselection.SampleSelectionView</Bundle-Category>
