--- a/developmentPlugins/SearchModeSymmetryFilter/pom.xml
+++ b/developmentPlugins/SearchModeSymmetryFilter/pom.xml
@@ -97,9 +97,9 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
+                <configuration>   
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package>com.affymetrix.searchmodesymmetryfilter</Export-Package>
                         <Bundle-Activator>com.affymetrix.searchmodesymmetryfilter.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
