--- a/plugins/ApolloLibrary/pom.xml
+++ b/plugins/ApolloLibrary/pom.xml
@@ -52,7 +52,7 @@
                             apollo.util
                         </Export-Package>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-SymbolicName>com.affymetrix.igb.ApolloLibrary</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                     </instructions>
                 </configuration>
             </plugin>
