--- a/plugins/PairedEndDataPreprocessor/pom.xml
+++ b/plugins/PairedEndDataPreprocessor/pom.xml
@@ -70,6 +70,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Import-Package>
                             !com.lorainelab.igb.preprocessor,
                             *
