--- a/plugins/plugins_page/src/main/resources/bundles.properties
+++ b/plugins/plugins_page/src/main/resources/bundles.properties
@@ -1,10 +1,10 @@
-com.affymetrix.common;2.0.0
-com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel;2.0.0
-com.affymetrix.igb.ApolloLibrary;2.0.0
-com.gene.bigbedhandler.BigBedHandler;2.0.0
-com.gene.bigwighandler.BigWigHandler;2.0.0
+affymetrix-common;2.0.0
+annotation-tab;2.0.0
+apollo-library;2.0.0
+bigBedHandler;2.0.0
+bigWigHandler;2.0.0
 BigWig;1.0.0
-com.affymetrix.igb.Bookmark;2.0.0
+bookmark;2.0.0
 com.lorainelab.bundle-info;1.0.0
 org.apache.commons.codec;1.6.0
 org.apache.commons.compress;1.2.0
@@ -12,39 +12,41 @@ org.apache.commons.csv;1.0.0
 org.apache.commons.io;2.4.0
 org.apache.commons.lang3;3.1.0
 org.apache.commons.pool;1.6.0
-com.lorainelab.console-gui;1.0.0
-com.affymetrix.igb.ExternalView;2.0.0
-com.affymetrix.genometryImpl;2.0.0
+console-gui;1.0.0
+externalView;2.0.0
+genometryImpl;2.0.0
 com.affymetrix.genoviz;1.0.9
-com.affymetrix.igb.tabs.graph.GraphTab;2.0.0
+graphTab;2.0.0
 com.google.gson;2.3.1
 com.google.guava;16.0.1
-com.affymetrix.heatmap-editor;2.0.0
-com.affymetrix.igb.IGB;2.0.0
-com.affymetrix.igb-service;2.0.0
-com.affymetrix.igbScript;2.0.1
-com.affymetrix.igbSwingExt;2.0.0
-com.lorainelab.igbr;2.0.0
+heatmap-editor;2.0.0
+igb;2.0.0
+igb-genoviz-extensions-api;1.0.0
+igb-service;2.0.0
+igbScript;2.0.1
+igbSwingExt;2.0.0
+igbr;2.0.0
 com.jidesoft.ultimate;3.5.15
-com.affymetrix.keyWordSearch;2.0.0
+keyWordSearch;2.0.0
 org.apache.logging.log4j-api;2.0.0.rc1
 ch.qos.logback.classic;1.1.2
 ch.qos.logback.core;1.1.2
 com.lorainelab.logging-config;1.0.0
-com.affymetrix.ncbiBlast;2.0.0
-com.lorainelab.paired-data-preprocessor;2.0.0
-com.affymetrix.igb.PluginsPage;2.0.0
-com.affymetrix.igb.PropertyView;2.0.0
-com.affymetrix.igb.RestrictionSites;2.0.0
-com.affymetrix.searchModeLucene;2.0.0
-com.affymetrix.searchModelIdOrProps;2.0.0
-com.affymetrix.igb.SearchView;2.0.0
-com.affymetrix.sequenceViewer;2.0.0
-com.affymetrix.sharedLibWrapper;2.0.0
+ncbiBlast;2.0.0
+org.apache.felix.scr;1.8.2
+paired-data-preprocessor;2.0.0
+pluginsPage;2.0.0
+propertyView;2.0.0
+restrictionSites;2.0.0
+searchModeLucene;2.0.0
+searchModelIdOrProps;2.0.0
+searchView;2.0.0
+sequenceViewer;2.0.0
+sharedLibWrapper;2.0.0
 slf4j.api;1.7.7
-com.affymetrix.survey;2.0.2
-com.affymetrix.thresholding;2.0.0
-com.affymetrix.tutorial;2.0.0
-com.affymetrix.update;2.0.1
-com.affymetrix.window-service;2.0.0
-com.affymetrix.windowsServiceDef;2.0.0
+survey;2.0.2
+thresholding;2.0.0
+tutorial;2.0.0
+update;2.0.1
+window-service;2.0.0
+windowsServiceDef;2.0.0
