--- a/core/window_service/pom.xml
+++ b/core/window_service/pom.xml
@@ -41,6 +41,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Import-Package>*,com.affymetrix.igb;resolution:=optional</Import-Package>
