--- a/developmentPlugins/BAMIndexer/pom.xml
+++ b/developmentPlugins/BAMIndexer/pom.xml
@@ -106,7 +106,7 @@
                         <Export-Package/>
                         <Bundle-Activator>com.affymetrix.igb.bamindexer.Activator</Bundle-Activator>   
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-SymbolicName>com.affymetrix.igb.bamindexer</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Description>Plugin to enable indexing of local bam files if an index does not exist</Bundle-Description>
                     </instructions>
                 </configuration>
