--- a/developmentPlugins/FindAnnotations/pom.xml
+++ b/developmentPlugins/FindAnnotations/pom.xml
@@ -121,6 +121,7 @@
                 <configuration>
                     <obrRepository>../extbundles</obrRepository>    
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package/>
                         <Bundle-Activator>com.gene.findannotations.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
