--- a/developmentPlugins/NCBIPrimer/pom.xml
+++ b/developmentPlugins/NCBIPrimer/pom.xml
@@ -90,6 +90,7 @@
                 <configuration>
                     <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>       
                         <Import-Package>com.affymetrix.igb.osgi.service,*;resolution:=optional</Import-Package>
