--- a/developmentPlugins/ThousandGenomesServerType/pom.xml
+++ b/developmentPlugins/ThousandGenomesServerType/pom.xml
@@ -107,8 +107,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package/>
                         <Bundle-Activator>com.gene.thousandgenomesservertype.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
