--- a/plugins/AnnotationTab/pom.xml
+++ b/plugins/AnnotationTab/pom.xml
@@ -88,7 +88,7 @@
                 <configuration>
                     <instructions>
                         <Embed-Transitive>true</Embed-Transitive>
-                        <Bundle-SymbolicName>com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Import-Package>com.jidesoft.combobox,com.affymetrix.igb.window.service,*</Import-Package>
                         <Bundle-Activator>com.affymetrix.igb.tabs.annotation.Activator</Bundle-Activator>
                         <Bundle-Category>IGBTabPanel-com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel</Bundle-Category>
