--- a/plugins/ExternalView/pom.xml
+++ b/plugins/ExternalView/pom.xml
@@ -107,7 +107,7 @@
                         <Bundle-Category>IGBTabPanel-com.affymetrix.igb.externall.ExternalViewer</Bundle-Category>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                         <Bundle-Activator>com.affymetrix.igb.external.Activator</Bundle-Activator>
-                        <Bundle-SymbolicName>com.affymetrix.igb.ExternalView</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                     </instructions>
                 </configuration>
             </plugin>            
