--- a/plugins/plugins_page/pom.xml
+++ b/plugins/plugins_page/pom.xml
@@ -116,7 +116,7 @@
                         <Bundle-Activator>com.affymetrix.igb.plugins.Activator</Bundle-Activator>
                         <Bundle-Category>IGBTabPanel-com.affymetrix.igb.plugins.PluginsView</Bundle-Category>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-SymbolicName>com.affymetrix.igb.PluginsPage</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Description>IGB plugins page for managing plugins</Bundle-Description>
                     </instructions>
                 </configuration>
