--- a/plugins/ExternalView/src/main/resources/external.properties
+++ b/plugins/ExternalView/src/main/resources/external.properties
@@ -37,7 +37,7 @@ ucscTT3=where it says "hguid=..." into the text box and click submit.
 connError=Error: could not resolve connection
 serverError=Error: the server was not able to return the answer in the appropriate time
 error=Error: {0}
-resolveError=could not resolve url for genome
+resolveError=An external viewer is not available for this genome. If you have questions, please contact the IGB team.
 ensembleFileErrorTitle=Cannot open ensembl url mapping file
 ensembleFileError=Cannot find ensembl url mapping file '{0}'.\nENSEMBL view will not be available.
 ensemblTransposeError=Error: could not transpose the genome {0} for ENSEMBL
